--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" amp>
   <head>
     <title>Buscador AMP</title>
     <meta charset="utf-8">
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0164bf">
     <meta name="author" content="Viajanet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
@@ -21,7 +21,7 @@
         <img class="search__container__selo" alt="Selo de Garantia" src="https://www.viajanet.com.br/static/assets/platform/img/economia.png">
 
         <fieldset class="search__group">
-          <form class="search__group__form" action="index.html" method="post">
+          <amp-form class="search__group__form" action="index.html">
             <div class="section">
               <strong class="section__title">Encontre os melhores preços e boa viagem!</strong>
               <label class="section__lbl">
@@ -90,7 +90,7 @@
                 </div>
               </div>
             </div>
-          </form>
+          </amp-form>
         </fieldset>
       </div>
 
