Correção da tag img amp

--- a/index-amp.html
+++ b/index-amp.html
@@ -19,7 +19,7 @@
       </ul>
 
       <div class="search__container">
-        <amp-img class="search__container__selo" alt="Selo de Garantia" src="https://www.viajanet.com.br/static/assets/platform/img/economia.png">
+        <amp-img class="search__container__selo" alt="Selo de Garantia" src="https://www.viajanet.com.br/static/assets/platform/img/economia.png"></amp-img>
 
         <fieldset class="search__group">
           <amp-form class="search__group__form" action="index.html" method="post">
