Correção tags amp sem fechamento

--- a/index-amp.html
+++ b/index-amp.html
@@ -96,7 +96,7 @@
                 </div>
               </div>
             </div>
-          </form>
+          </amp-form>
         </fieldset>
       </div>
 
