--- a/index-amp.html
+++ b/index-amp.html
@@ -3,12 +3,26 @@
   <head>
     <title>Buscador AMP</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+      <!-- First we include `amp-form`, which is required when using `<form>` elements in AMP documents. -->
+  <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
+  <!-- Next we include `amp-selector` to easily display results in an accessible list. -->
+  <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
+  <!-- Then we include `amp-list` to request and display the autosuggest results. -->
+  <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
+  <!-- Then we include `amp-mustache` to render the mustache templates inside the `<amp-list>`. -->
+  <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"></script>
+  <!-- Finally we include `amp-bind` to track and update the page's state after user interactions.-->
+  <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
+    <link rel="canonical" href="https://www.viajanet.com.br/searchengine-amp">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="theme-color" content="#0164bf">
     <meta name="author" content="Viajanet">
-
-    <link rel="stylesheet" href="css/main.css">
     <link type="image/x-icon" rel="shortcut icon" href="https://www.viajanet.com.br/static/assets/companies/ViajaNet/img/favicon.ico">
+    <!--<link rel="stylesheet" href="css/main.css">-->
+    <style amp-custom>body{background-image:url(../assets/background-2.jpg);background-size:cover}@media screen and (max-width: 767px){body{background-size:inherit}}.search{margin:60px auto 30px;max-width:980px}.search__tab{background:rgba(1,100,191,0.9);border-radius:3px 3px 0 0;display:inline-block;list-style:none;margin:0;padding:0}@media screen and (max-width: 767px){.search__tab{background:#004987;text-align:center;width:100%}}.search__tab li a{color:#fff;display:block;font-size:20px;padding:10px 30px;text-decoration:none}.search__container{background:rgba(1,100,191,0.9);border-radius:0 3px 0 0;padding:20px 35px;position:relative}@media screen and (max-width: 767px){.search__container{padding:10px;border-radius:0}}.search__container__selo{top:15px;right:40px;position:absolute}@media screen and (max-width: 767px){.search__container__selo{display:none}}.search__group{border:none;margin:0;padding:0;color:#fff}.search__group__form .section__title{display:block;font-size:28px;margin:0 0 20px}@media screen and (max-width: 767px){.search__group__form .section__title{display:none}}.search__group__form .section__lbl{display:block;margin-bottom:15px}.search__group__form .section__lbl__radio-option{margin:0 5px 0 0}.search__group__form .section .travel__origin,.search__group__form .section .travel__destination{display:inline-block;float:left;width:49%}@media screen and (max-width: 767px){.search__group__form .section .travel__origin,.search__group__form .section .travel__destination{width:100%}}.search__group__form .section .travel__origin label,.search__group__form .section .travel__destination label{display:inline-block;margin-bottom:10px;width:100%}.search__group__form .section .travel__origin label span,.search__group__form .section .travel__destination label span{display:block;margin-bottom:6px}.search__group__form .section .travel__origin label input,.search__group__form .section .travel__destination label input{background:#fff;border:1px solid #e1e1e1;border-radius:3px;color:#0164bf;font-size:13px;font-weight:bold;outline:0;padding:12px;width:-webkit-fill-available}.search__group__form .section .travel__destination{margin-left:2%}@media screen and (max-width: 767px){.search__group__form .section .travel__destination{margin-left:0}}.search__group__form .section .travel__date{display:inline-block;float:left;width:49%}@media screen and (max-width: 767px){.search__group__form .section .travel__date{width:100%}}.search__group__form .section .travel__date--outbound,.search__group__form .section .travel__date--inbound{display:inline-block;float:left;width:48%}.search__group__form .section .travel__date--outbound label,.search__group__form .section .travel__date--inbound label{display:inline-block;margin-bottom:10px;width:100%}.search__group__form .section .travel__date--outbound label span,.search__group__form .section .travel__date--inbound label span{display:block;margin-bottom:6px}.search__group__form .section .travel__date--outbound label input,.search__group__form .section .travel__date--inbound label input{background:#fff;border:1px solid #e1e1e1;border-radius:3px;color:#0164bf;font-size:13px;font-weight:bold;outline:0;padding:12px;width:-webkit-fill-available}.search__group__form .section .travel__date--inbound{margin-left:4%}.search__group__form .section .travel__people{display:inline-block;float:left;margin-left:2%;width:49%}@media screen and (max-width: 767px){.search__group__form .section .travel__people{margin-left:0;width:100%}}.search__group__form .section .travel__people label{display:inline-block;height:76px;width:30%}@media screen and (max-width: 767px){.search__group__form .section .travel__people label{width:31%}}.search__group__form .section .travel__people label span{display:block;margin-bottom:6px}.search__group__form .section .travel__people label select{background:#004987;border:2px solid #004987;border-radius:3px;color:#fff;font-size:13px;font-weight:bold;outline:0;padding:10px 6px;width:100%}@media screen and (max-width: 767px){.search__group__form .section .travel__people label select{font-size:11px}}.search__group__form .section .travel__people label select:active,.search__group__form .section .travel__people label select:focus{border:2px solid #ef6600}.search__group__form .section .travel__people label small{display:block;margin-top:5px}.search__group__form .section .travel__people__adults small{color:transparent}.search__group__form .section .travel__people__children,.search__group__form .section .travel__people__babies{margin-left:2.5%}@media screen and (max-width: 767px){.search__group__form .section .travel__people__children,.search__group__form .section .travel__people__babies{margin-left:2%}}.search__button__submit{background:rgba(121,186,37,0.9);border:none;border-radius:0 0 3px 3px;color:#fff;cursor:pointer;font-size:18px;font-weight:bold;padding:10px;width:100%}.search__button__submit:hover{background:#79ba25}.search__button__submit:active,.search__button__submit:focus{outline:none}</style>
+    
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   </head>
   <body>
 
@@ -19,10 +33,19 @@
       </ul>
 
       <div class="search__container">
-        <amp-img class="search__container__selo" alt="Selo de Garantia" src="https://www.viajanet.com.br/static/assets/platform/img/economia.png"></amp-img>
+        <amp-img class="search__container__selo"  width="900"  height="675"  layout="responsive" alt="Selo de Garantia" src="https://www.viajanet.com.br/static/assets/platform/img/economia.png"></amp-img>
 
         <fieldset class="search__group">
-          <amp-form class="search__group__form" action="index.html" method="post">
+          <form class="search__group__form" 
+          method="post"
+          action-xhr="https://www.viajanet.com.br"
+          target="_blank"
+          id="search-form"
+          on="
+            submit: autosuggest-list.hide;
+            submit-success: autosuggest-list.hide;
+            submit-error: autosuggest-list.hide"
+        >
             <div class="section">
               <strong class="section__title">Encontre os melhores preços e boa viagem!</strong>
               <label class="section__lbl">
