Inserindo Header, Banner e Footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
 
+    <header class="header">
+      <img class="logo" src="https://www.viajanet.com.br/static/assets/platform/img/logo.svg;wac995548723fe915d" alt="ViajaNet" title="ViajaNet">
+    </header>
+
     <!-- Search -->
     <div class="search">
       <ul class="search__tab">
@@ -105,6 +109,16 @@
       </div>
     </div>
     <!-- Close Search -->
+
+    <div class="banner">
+      <div class="banner__content">
+        <a href="" target="_blank" class="banner__link"> <img src="#" alt="Publicidade" class="banner__link__img"> </a>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <span class="copy">© 2018 ViajaNet Viagens Online - Todos os direitos reservados</span>
+    </footer>
 
   </body>
 </html>
