Inclusão de header, banner e footer para o index-amp e adptação para o modo amp

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   </head>
   <body>
 
+    <!-- Header -->
     <header class="header">
       <img class="logo" src="https://www.viajanet.com.br/static/assets/platform/img/logo.svg;wac995548723fe915d" alt="ViajaNet" title="ViajaNet">
     </header>
+    <!-- Close Header -->
 
     <!-- Search -->
     <div class="search">
@@ -110,15 +112,19 @@
     </div>
     <!-- Close Search -->
 
+    <!-- Banner -->
     <div class="banner">
       <div class="banner__content">
         <a href="" target="_blank" class="banner__link"> <img src="#" alt="Publicidade" class="banner__link__img"> </a>
       </div>
     </div>
+    <!-- Close Banner -->
 
+    <!-- Footer -->
     <footer class="footer">
       <span class="copy">© 2018 ViajaNet Viagens Online - Todos os direitos reservados</span>
     </footer>
+    <!-- Close Footer -->
 
   </body>
 </html>
