--- a/index-amp.html
+++ b/index-amp.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Viajanet">
 
         <script async src="https://cdn.ampproject.org/v0.js"></script>
+        <script async custom-element="amp-date-picker" src="https://cdn.ampproject.org/v0/amp-date-picker-0.1.js"></script>
         <!-- First we include `amp-form`, which is required when using `<form>` elements in AMP documents. -->
         <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
         <!-- Next we include `amp-selector` to easily display results in an accessible list. -->
@@ -26,6 +27,72 @@
 
         <style amp-custom>body{background-image:url(assets/background-2.jpg);background-size:cover;margin:0}@media screen and (max-width: 767px){body{background-size:inherit}}.header{background:#fff;box-shadow:0 0 3px rgba(0,0,0,0.2);height:60px;text-align:center;width:100%}.header .logo{margin-top:10px}.search{margin:60px auto 60px;max-width:980px}@media screen and (max-width: 767px){.search{margin:30px auto 30px;width:98%}}.search__tab{background:rgba(1,100,191,0.9);border-radius:3px 3px 0 0;display:inline-block;list-style:none;margin:0;padding:0}@media screen and (max-width: 767px){.search__tab{background:#004987;text-align:center;width:100%}}.search__tab li a{color:#fff;display:block;font-size:20px;padding:10px 30px;text-decoration:none}.search__container{background:rgba(1,100,191,0.9);border-radius:0 3px 0 0;padding:20px 35px;position:relative}@media screen and (max-width: 767px){.search__container{padding:10px;border-radius:0}}.search__container__selo{top:15px;right:40px;position:absolute}@media screen and (max-width: 767px){.search__container__selo{display:none}}.search__group{border:none;margin:0;padding:0;color:#fff}.search__group__form .section__title{display:block;font-size:28px;margin:0 0 20px}@media screen and (max-width: 767px){.search__group__form .section__title{display:none}}.search__group__form .section__lbl{display:block;margin-bottom:15px}.search__group__form .section__lbl__radio-option{margin:0 5px 0 0}.search__group__form .section .travel__origin,.search__group__form .section .travel__destination{float:left;width:49%}@media screen and (max-width: 767px){.search__group__form .section .travel__origin,.search__group__form .section .travel__destination{width:100%}}.search__group__form .section .travel__origin label,.search__group__form .section .travel__destination label{display:inline-block;margin-bottom:10px;width:100%}.search__group__form .section .travel__origin label span,.search__group__form .section .travel__destination label span{display:block;margin-bottom:6px}.search__group__form .section .travel__origin label input,.search__group__form .section .travel__destination label input{background:#fff;border:1px solid #e1e1e1;border-radius:3px;color:#0164bf;font-size:13px;font-weight:bold;outline:0;padding:12px;width:-webkit-fill-available}.search__group__form .section .travel__destination{margin-left:2%}@media screen and (max-width: 767px){.search__group__form .section .travel__destination{margin-left:0}}.search__group__form .section .travel__date{float:left;width:49%}@media screen and (max-width: 767px){.search__group__form .section .travel__date{width:100%}}.search__group__form .section .travel__date--outbound,.search__group__form .section .travel__date--inbound{float:left;width:48%}.search__group__form .section .travel__date--outbound label,.search__group__form .section .travel__date--inbound label{display:inline-block;margin-bottom:10px;width:100%}.search__group__form .section .travel__date--outbound label span,.search__group__form .section .travel__date--inbound label span{display:block;margin-bottom:6px}.search__group__form .section .travel__date--outbound label input,.search__group__form .section .travel__date--inbound label input{background:#fff;border:1px solid #e1e1e1;border-radius:3px;color:#0164bf;font-size:13px;font-weight:bold;outline:0;padding:12px;width:-webkit-fill-available}.search__group__form .section .travel__date--inbound{margin-left:4%}.search__group__form .section .travel__people{float:left;margin-left:2%;width:49%}@media screen and (max-width: 767px){.search__group__form .section .travel__people{margin-left:0;width:100%}}.search__group__form .section .travel__people label{display:inline-block;height:76px;width:30%}@media screen and (max-width: 767px){.search__group__form .section .travel__people label{width:31%}}.search__group__form .section .travel__people label span{display:block;margin-bottom:6px}.search__group__form .section .travel__people label select{background:#004987;border:2px solid #004987;border-radius:3px;color:#fff;font-size:13px;font-weight:bold;outline:0;padding:10px 6px;width:100%}@media screen and (max-width: 767px){.search__group__form .section .travel__people label select{font-size:11px}}.search__group__form .section .travel__people label select:active,.search__group__form .section .travel__people label select:focus{border:2px solid #ef6600}.search__group__form .section .travel__people label small{display:block;margin-top:5px}.search__group__form .section .travel__people__adults small{color:transparent}.search__group__form .section .travel__people__children,.search__group__form .section .travel__people__babies{margin-left:2.5%}@media screen and (max-width: 767px){.search__group__form .section .travel__people__children,.search__group__form .section .travel__people__babies{margin-left:2%}}.search__button__submit{background:rgba(121,186,37,0.9);border:none;border-radius:0 0 3px 3px;color:#fff;cursor:pointer;font-size:18px;font-weight:bold;padding:10px;width:100%}.search__button__submit:hover{background:#79ba25}.search__button__submit:active,.search__button__submit:focus{outline:none}.banner{margin-bottom:30px}.banner__content{margin:0 auto;max-width:980px}@media screen and (max-width: 767px){.banner__content{max-width:300px}}.banner__link{display:block;width:100%}.banner__link__img{background:#440095;border:1px solid #ededed;border-radius:2px;color:#fff;display:block;height:90px;margin:0 auto;width:728px}@media screen and (max-width: 767px){.banner__link__img{max-width:300px}}.footer{background:#f7f7f7;display:inline-block;height:50px;position:relative;bottom:0;text-align:center;width:100%}.footer .copy{color:#858585;display:block;font-size:13px;margin:16px 0}@media screen and (max-width: 767px){.footer .copy{font-size:11px;margin:19px 0}}</style>
         <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+
+        <style amp-custom>
+            .CalendarMonth_caption {
+                color: #fff;
+                background: #ffa600;
+                padding: 8px 0;
+                margin: 0 -30px 21px;
+            }
+
+            .CalendarMonth_caption > * {
+                font-weight: bold;
+                font-size: 15px;
+            }
+
+            .DayPickerNavigation_button__horizontal {
+                top: 6px;
+            }
+
+            .DayPicker_weekHeader {
+                color: #7d7d7d;
+                background: #ebebeb;
+                top: 40px;
+            }
+
+            .amp-date-picker-resize-bug .DayPicker_transitionContainer {
+                min-height: 300px;
+            }
+
+            .CalendarDay__selected_start {
+                background-color: #0164bf;
+                border: 1px solid #0164bf;
+            }
+
+            .CalendarDay__selected_end {
+                background: #ffa600;
+                border: 1px solid #ffa600;
+            }
+
+            .CalendarDay__hovered_span, 
+            .CalendarDay__hovered_span:hover, 
+            .CalendarDay__selected_span, 
+            .CalendarDay__selected_span:active, 
+            .CalendarDay__selected_span:hover {
+                background-color: #f7f7f7;
+                border: 1px solid #f7f7f7;
+            }
+
+            [type="range"] .amp-date-picker-selecting {
+                border-bottom-color: #b60845;
+                color: #b60845;
+            }
+
+            .align-content-center,
+            .align-content-center .amp-date-picker-calendar-container {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: row;
+            }
+
+            amp-date-picker[mode=overlay] .i-amphtml-date-picker-container {
+                top: calc(100% + 66px);
+                left: 50%;
+                margin-left: -159px;
+            }            
+        </style>
     </head>
 
     <body>
@@ -90,20 +157,36 @@
                                             maxlength="500">
                                     </label>
                                 </div>
-                                <div class="travel__date">
-                                    <div class="travel__date--outbound">
-                                        <label>
-                                            <span>Data de Ida</span>
-                                            <input name="departureDate" id="departureDate" tabindex="4" type="text" required placeholder="Data de Ida" maxlength="500">
-                                        </label>
-                                    </div>
 
-                                    <div class="travel__date--inbound">
-                                        <label>
-                                            <span>Data de Volta</span>
-                                            <input name="arrivalDate" id="arrivalDate" tabindex="5" type="text" required placeholder="Data de Volta" maxlength="500">
-                                        </label>
-                                    </div>
+                                <div class="travel__date">
+                                    <amp-date-picker type="range" mode="overlay" id="range-date-picker" 
+                                        on="select:
+                                            AMP.setState({
+                                                dates: event.dates,
+                                                startDate: event.start,
+                                                endDate: event.end
+                                            })" 
+                                        format="DD/MM/YYYY" 
+                                        open-after-select min="2017-10-26" 
+                                        start-input-selector="#range-start" 
+                                        end-input-selector="#range-end"
+                                        locale="pt-br"
+                                        class="space-between">
+                                        
+                                        <div class="travel__date--outbound">
+                                            <label>
+                                                <span>Data de Ida</span>
+                                                <input class="border-none p0" id="range-start" placeholder="Data de ida">
+                                            </label>
+                                        </div>
+                                        
+                                        <div class="travel__date--inbound">
+                                            <label>
+                                                <span>Data de Volta</span>
+                                                <input class="border-none p0" id="range-end" placeholder="Data de volta">
+                                            </label>
+                                        </div>
+                                    </amp-date-picker>
                                 </div>
 
                                 <div class="travel__people">
