--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
 
       <div class="search__button">
-        <button class="search__button__submit" type="button" name="button">Pesquisar</button>
+        <a class="search__button__submit" type="button" name="button"><span>Pesquisar</span></a>
       </div>
     </div>
     <!-- Close Search -->
