--- a/index-amp.html
+++ b/index-amp.html
@@ -74,7 +74,7 @@
                                 <label>
                                     <span>Informe sua origem</span>
                                     <input name="inptorigin" id="inptorigin" tabindex="2"
-                                     type="text" required="" placeholder="Cidade ou aeroporto" on="
+                                     type="text" placeholder="Cidade ou aeroporto" on="
                                      input-debounced:
                                        AMP.setState({
                                          queryOrigin: event.value,
@@ -124,7 +124,7 @@
                             <div class="travel__destination">
                                 <label>
                                     <span>Informa seu destino</span>
-                                    <input name="inptdestination" id="inptdestination" tabindex="3" type="text" required="" placeholder="Cidade ou aeroporto" on="
+                                    <input name="inptdestination" id="inptdestination" tabindex="3" type="text" placeholder="Cidade ou aeroporto" on="
                                     input-debounced:
                                       AMP.setState({
                                         queryDestination: event.value,
@@ -255,12 +255,12 @@
         <div class="banner__content">
                <amp-img src="#" width="728" height="90" alt="Publicidade" class="banner__link__img">
                 </amp-img>
-                <amp-ad width=320 height=50
+               <!--  <amp-ad width=320 height=50
                     data-override-width=111
                     data-override-height=222
                     type="doubleclick"
                     data-slot="google_ads_iframe_/5204993/one2one_superbanner_0">
-                </amp-ad>
+                </amp-ad> -->
         </div>
     </div>
     <!-- Close Banner -->
